apps/saleor-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-api
  namespace: kyeol
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: kyeol-ingress # Shared ALB with storefront
spec:
  rules:
    - http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: saleor-api
                port:
                  number: 80
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: saleor-api
                port:
                  number: 80
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: saleor-api
                port:
                  number: 80
